# tubeupac

./: Makefile  README.md  pyproject.toml  setup.cfg  test-requirements.txt
tests/: constants.py  test_tubeupac.py  test_utils.py
tests/test_tubeupac_files/: Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.info.json  ia_config_for_test.ini
tests/test_tubeupac_files/files_for_upload_and_download_tests/: KdsN9YhkDrY.description  KdsN9YhkDrY.info.json  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.annotations.xml  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.description
tubeupac/: TubeUp.py  __init__.py  __main__.py  utils.py
